unpackaged/main/default/objects/project_cloud__Checklist__c/project_cloud__Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>