unpackaged/main/default/objects/project_cloud__Checklist__c/fields/ccpe_ocp__IsDeliverable__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__IsDeliverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a checklist is used for External Deliverables.</description>
    <inlineHelpText>When checked, indicates this is an External Deliverable Checklist.</inlineHelpText>
    <label>Is Deliverable</label>
    <type>Checkbox</type>
</CustomField>