unpackaged/main/default/objects/project_cloud__Checklist__c/fields/project_cloud__IsArchived__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a checklist is archived. Archived checklists won&#39;t show in My Day checklist tab without searching for them.</description>
    <inlineHelpText>When checked, indicates that the Checklist is Archived.</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>