unpackaged/main/default/objects/project_cloud__Checklist__c/fields/project_cloud__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the default personal checklist for a user.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>