unpackaged/main/default/objects/project_cloud__Checklist__c/fields/project_cloud__Project_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Project Rollup that this Checklist is related to.</inlineHelpText>
    <label>Project (Rollup)</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Checklists (Rollup)</relationshipLabel>
    <relationshipName>Checklists_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>